--- a/src/components/contact/index.css
+++ b/src/components/contact/index.css
@@ -1,5 +1,5 @@
 .container.contact__container {
-  width: 58%;
+  width: 30%;
   display: grid;
   grid-template-columns: 30% 58%;
   gap: 12%;
@@ -10,12 +10,12 @@
   flex-direction: column;
   gap: 1.2rem;
 }
-
+/* 
 .contact__option {
   padding: 1.2rem;
   border-radius: 1.2rem;
   text-align: center;
-}
+} */
 
 .contact__option-icon {
   font-size: 1.5rem;
@@ -26,4 +26,10 @@
   margin-top: 0.7rem;
   display: inline-block;
   font-size: 0.8rem;
+}
+
+.btn {
+  background: pink;
+  border-radius: 29px;
+  border-color: blueviolet;
 }
